--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #ececec;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin-top: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.headerStyle {
+  background-color: #E6DEF6;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  color: #613EA6;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.section {
+  width: 1200px;
+  transition: width 0.5s ease;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1200px) {
+  .section {
+    width: 800px;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+.writeBox {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-top: 15px;
+}
+
+input {
+  height: 25px;
+  padding-left: 10px;
+  margin: 10px;
+  margin-right: 35px;
+  border: 1px solid #E0E0E0;
+  border-radius: 5px;
+}
+
+button {
+  width: 100px;
+  height: 30px;
+  background-color: #E6DEF6;
+  border: 0px;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+.nowWorking, .done {
+  background-color: #ffffff;
+  padding: 35px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.cardList {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.todoCard {
+  background-color: #EFFFFB;
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px 2px rgb(210, 209, 212);
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background-color: #E0E0E0;
+
+}
+
+.showTitle {
+  font-weight: bold;
+  font-size: 15pt;
+  margin-bottom: 10px;
+}
+
+.showMemo {
+  padding-bottom: 30px;
 }
