--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: "font_regular";
+  src: url("./fonts/NanumSquareNeoOTF-Rg.otf");
+}
+
+@font-face {
+  font-family: "font_bold";
+  src: url("./fonts/NanumSquareNeoOTF-Bd.otf");
+}
+
+@font-face {
+  font-family: "font_extraBold";
+  src: url("./fonts/NanumSquareNeoOTF-Eb.otf");
+}
+
 body {
   background-color: #ececec;
   display: flex;
@@ -5,6 +20,11 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 40px;
+  font-family: "font_regular";
+}
+
+h3 {
+  font-family: "font_extraBold";
 }
 
 .headerStyle {
@@ -13,6 +33,8 @@ body {
   display: flex;
   justify-content: center;
   color: #613EA6;
+  letter-spacing: 2px;
+  font-family: "font_extraBold";
 }
 
 .section {
@@ -52,6 +74,15 @@ button {
   border: 0px;
   border-radius: 5px;
   margin: 5px;
+  font-family: "font_bold";
+}
+
+.button-with-click-effect {
+  transition: transform 0.2s ease-in-out;
+}
+
+.button-with-click-effect:active {
+  transform: translateY(2px) translateX(2px);
 }
 
 .nowWorking, .done {
